# nxengine-evo

./: .gitignore  CMakeLists.txt
cmake/: PlatformSwitch.cmake  PlatformVita.cmake
platform/win32/: nx.rc.in
src/Utils/: Logger.h
